// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IllustCardSmall 1`] = `
<div
  class="IllustCardSmall__Root-sc-1kir3jt-0 idVDSr"
>
  <div
    class="IllustCardSmall__ImageWrapper-sc-1kir3jt-1 kEjaWo"
  >
    <span
      style="box-sizing:border-box;display:inline-block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:relative;max-width:100%"
    >
      <span
        style="box-sizing:border-box;display:block;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;max-width:100%"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iODAiIGhlaWdodD0iODAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
          style="display:block;max-width:100%;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0"
        />
      </span>
      <img
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain"
      />
      <noscript>
        &lt;img srcSet="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=96&amp;q=75 1x, /_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75 2x" src="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75" decoding="async" data-nimg="intrinsic" style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain" loading="lazy"/&gt;
      </noscript>
    </span>
  </div>
  <div
    class="IllustCardSmall__TextWrapper-sc-1kir3jt-2 bFOcND"
  >
    sampletext
  </div>
</div>
`;

exports[`IllustCardSmall 2`] = `
<div
  class="IllustCardSmall__Root-sc-1kir3jt-0 eBDbzU"
>
  <div
    class="IllustCardSmall__ImageWrapper-sc-1kir3jt-1 kEjaWo"
  >
    <span
      style="box-sizing:border-box;display:inline-block;overflow:hidden;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;position:relative;max-width:100%"
    >
      <span
        style="box-sizing:border-box;display:block;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0;max-width:100%"
      >
        <img
          alt=""
          aria-hidden="true"
          src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iODAiIGhlaWdodD0iODAiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyIgdmVyc2lvbj0iMS4xIi8+"
          style="display:block;max-width:100%;width:initial;height:initial;background:none;opacity:1;border:0;margin:0;padding:0"
        />
      </span>
      <img
        data-nimg="intrinsic"
        decoding="async"
        src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
        style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain"
      />
      <noscript>
        &lt;img srcSet="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=96&amp;q=75 1x, /_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75 2x" src="/_next/image?url=%2Fimages%2FfunctionalIcon1.png&amp;w=256&amp;q=75" decoding="async" data-nimg="intrinsic" style="position:absolute;top:0;left:0;bottom:0;right:0;box-sizing:border-box;padding:0;border:none;margin:auto;display:block;width:0;height:0;min-width:100%;max-width:100%;min-height:100%;max-height:100%;object-fit:contain" loading="lazy"/&gt;
      </noscript>
    </span>
  </div>
  <div
    class="IllustCardSmall__TextWrapper-sc-1kir3jt-2 bFOcND"
  >
    sampletext
  </div>
</div>
`;
